--- a/themes/coop-radio/sass/templates/program-details/_requirements.scss
+++ b/themes/coop-radio/sass/templates/program-details/_requirements.scss
@@ -1,6 +1,7 @@
 /* requirements */
 
 .requirements-main {
+  @include pad--h;
   @include desktop {
     display: flex;
   }
