--- a/themes/coop-radio/style.css
+++ b/themes/coop-radio/style.css
@@ -401,7 +401,8 @@ body {
   overflow: hidden; }
 
 main {
-  overflow: auto;
+  overflow-x: hidden;
+  max-width: 100vw;
   max-height: 87vh; }
   @media (min-height: 650px) {
     main {
@@ -1219,31 +1220,33 @@ a {
   visibility: hidden; }
 
 /* overview */
-@media (min-width: 1080px) {
-  .overview-main {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between; } }
-
-.overview-main .overview-item {
-  max-width: 600px;
-  margin: 0 auto; }
+.overview-main {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem; }
   @media (min-width: 1080px) {
-    .overview-main .overview-item {
-      width: 400px;
-      margin: 0 1.5rem; } }
-  .overview-main .overview-item .overview-img {
-    display: block;
-    margin: 0 auto;
-    max-height: 200px; }
-  .overview-main .overview-item .overview-text {
-    text-align: left; }
+    .overview-main {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-pack: justify;
+          -ms-flex-pack: justify;
+              justify-content: space-between; } }
+  .overview-main .overview-item {
+    max-width: 600px;
+    margin: 0 auto; }
     @media (min-width: 1080px) {
-      .overview-main .overview-item .overview-text {
-        text-align: center; } }
+      .overview-main .overview-item {
+        width: 400px;
+        margin: 0 1.5rem; } }
+    .overview-main .overview-item .overview-img {
+      display: block;
+      margin: 0 auto;
+      max-height: 200px; }
+    .overview-main .overview-item .overview-text {
+      text-align: left; }
+      @media (min-width: 1080px) {
+        .overview-main .overview-item .overview-text {
+          text-align: center; } }
 
 /* get started */
 @media (min-width: 1500px) {
@@ -1280,6 +1283,11 @@ a {
   .get-started-main .get-started-item h3 {
     margin: 0; }
 
+.signup-note {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+  margin-bottom: 4.5rem; }
+
 /* video */
 .program-details__video-container {
   position: relative;
@@ -1296,45 +1304,46 @@ a {
   height: 100%; }
 
 /* requirements */
-@media (min-width: 1080px) {
-  .requirements-main {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex; } }
-
-@media (min-width: 1080px) {
-  .requirements-main .requirement-img {
-    margin: 4.5rem 0; } }
-
-.requirements-main .requirement-img img {
-  border-radius: 10px;
-  -webkit-box-shadow: 0 0.5rem 0.5rem -0.25rem #2c2c2c;
-          box-shadow: 0 0.5rem 0.5rem -0.25rem #2c2c2c; }
-
-@media (min-width: 1080px) {
-  .requirements-main .requirement-img {
-    width: 50%;
-    margin: 1.5rem; } }
-
-.requirements-main .requirement-list {
-  text-align: left; }
+.requirements-main {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem; }
   @media (min-width: 1080px) {
-    .requirements-main .requirement-list {
+    .requirements-main {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex; } }
+  @media (min-width: 1080px) {
+    .requirements-main .requirement-img {
+      margin: 4.5rem 0; } }
+  .requirements-main .requirement-img img {
+    border-radius: 10px;
+    -webkit-box-shadow: 0 0.5rem 0.5rem -0.25rem #2c2c2c;
+            box-shadow: 0 0.5rem 0.5rem -0.25rem #2c2c2c; }
+  @media (min-width: 1080px) {
+    .requirements-main .requirement-img {
       width: 50%;
-      margin: 0 1.5rem; } }
+      margin: 1.5rem; } }
+  .requirements-main .requirement-list {
+    text-align: left; }
+    @media (min-width: 1080px) {
+      .requirements-main .requirement-list {
+        width: 50%;
+        margin: 0 1.5rem; } }
 
 /* timeline */
 .timeline__list {
   border-right: 0.75rem solid #8b1f7e;
   list-style: none;
   padding: 0;
-  margin: 0 0.75rem 0 0;
+  margin: 2.25rem 0.75rem 0 0;
   text-align: left; }
   @media (min-width: 1080px) {
     .timeline__list {
       width: 50%; } }
 
 .timeline__list-item {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
   position: relative;
   margin-bottom: 3rem; }
   .timeline__list-item::after {
@@ -1351,7 +1360,8 @@ a {
     border-radius: 50%;
     background-color: #8b1f7e; }
   @media (min-width: 1080px) {
-    .timeline__list-item:nth-child(even) .timeline__list-item-wrapper {
+    .timeline__list-item:nth-child(odd) .timeline__list-item-wrapper {
+      padding-left: 1.5rem;
       position: relative;
       left: 100%;
       margin-left: 3rem; } }
@@ -1364,28 +1374,29 @@ a {
   margin: 0; }
 
 /* training */
-@media (min-width: 600px) {
-  .training-core-main {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 0 100px; } }
-
-@media (min-width: 1500px) {
-  .training-core-main {
-    margin: 0 7.5rem;
-    grid-gap: 0 200px; } }
-
-.training-core-main .training-core {
-  margin: 20px 0;
-  max-width: 100%; }
-  .training-core-main .training-core .core-img {
-    display: block;
-    margin: 2.5rem auto; }
-  .training-core-main .training-core .core-text {
-    margin: 0 auto;
-    text-align: left; }
-    .training-core-main .training-core .core-text h3 {
-      margin: 0; }
+.training-core-main {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem; }
+  @media (min-width: 600px) {
+    .training-core-main {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      grid-gap: 0 100px; } }
+  @media (min-width: 1500px) {
+    .training-core-main {
+      margin: 0 7.5rem;
+      grid-gap: 0 200px; } }
+  .training-core-main .training-core {
+    margin: 20px 0;
+    max-width: 100%; }
+    .training-core-main .training-core .core-img {
+      display: block;
+      margin: 2.5rem auto; }
+    .training-core-main .training-core .core-text {
+      margin: 0 auto;
+      text-align: left; }
+      .training-core-main .training-core .core-text h3 {
+        margin: 0; }
 
 /*--------------------------------------------------------------
 # Enroll
